--- a/techa.html
+++ b/techa.html
@@ -23,19 +23,19 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#" style="color: white;">Home</a>
+                    <a class="nav-link active" aria-current="page" href="home.html" style="color: white;">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: white;">Education</a>
+                    <a class="nav-link" href="education.html" style="color: white;">Education</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: white;">Brokers</a>
+                    <a class="nav-link" href="brokers.html" style="color: white;">Brokers</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: white;">About Us</a>
+                    <a class="nav-link" href="aboutus.html" style="color: white;">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: white;">Contact Us</a>
+                    <a class="nav-link" href="contactus.html" style="color: white;">Contact Us</a>
                   </li>
                 </ul>
               </div>
